--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,43 @@
-*.class
+# Maven
+target/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Eclipse
+.settings/
+.classpath
+.project
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# NetBeans
+nbproject/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# IntelliJ
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Mac
+.DS_Store
+
+# Windows
+Thumbs.db
+
+# Ant
+build/
+dist/
+
+# Matlab
+*.asv
+*.m~
+*.mex*
+slprj/
+
+# Vim
+.*.s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
+# HotSpot
+hs_err*.log
+
