--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
         <artifactId>glimpse-core</artifactId>
         <version>2.5.0</version>
     </dependency>
+      <dependency>
+          <groupId>com.metsci.glimpse</groupId>
+          <artifactId>glimpse-docking</artifactId>
+          <version>2.4.0</version>
+      </dependency>
 	<dependency>
 	   <groupId>it.unimi.dsi</groupId>
 	   <artifactId>fastutil</artifactId>
